// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should be in a checked state 1`] = `
<View
  accessibilityHint="Tap to uncheck"
  accessibilityLabel="Checkbox"
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": true,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      },
      false,
    ]
  }
  testID="checkbox-pressable"
>
  <View
    style={
      {
        "variants": {
          "size": {
            "lg": {
              "height": 28,
              "width": 28,
            },
            "md": {
              "height": 24,
              "width": 24,
            },
            "sm": {
              "height": 20,
              "width": 20,
            },
          },
        },
      }
    }
    testID="checkbox-container"
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderColor": "#667080",
          "borderRadius": 3,
          "borderWidth": 1,
          "height": "100%",
          "justifyContent": "center",
          "variants": {
            "checked": {
              "false": {
                "backgroundColor": "transparent",
                "borderColor": "#667080",
                "opacity": 0.5,
              },
              "true": {
                "backgroundColor": "#667080",
                "borderColor": "#667080",
              },
            },
            "disabled": {
              "true": {
                "backgroundColor": "#EEF1F4",
                "borderColor": "#667080",
                "opacity": 0.5,
              },
            },
          },
          "width": "100%",
        }
      }
    >
      <View
        accessible={false}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={18}
          bbWidth={18}
          fill="none"
          focusable={false}
          height={18}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 18,
                "width": 18,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={18}
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
              ]
            }
          >
            <RNSVGGroup
              clipPath="a"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                d="m10 15.172 9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414 4.95 4.95Z"
                fill={
                  {
                    "payload": 4283321190,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
            <RNSVGDefs>
              <RNSVGClipPath
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                name="a"
              >
                <RNSVGPath
                  d="M0 0h24v24H0z"
                  fill={
                    {
                      "payload": 4294967295,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
              </RNSVGClipPath>
            </RNSVGDefs>
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`Checkbox should match to snapshot 1`] = `
<View
  accessibilityHint="Tap to check"
  accessibilityLabel="Checkbox"
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": false,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      },
      false,
    ]
  }
  testID="checkbox-pressable"
>
  <View
    style={
      {
        "variants": {
          "size": {
            "lg": {
              "height": 28,
              "width": 28,
            },
            "md": {
              "height": 24,
              "width": 24,
            },
            "sm": {
              "height": 20,
              "width": 20,
            },
          },
        },
      }
    }
    testID="checkbox-container"
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderColor": "#667080",
          "borderRadius": 3,
          "borderWidth": 1,
          "height": "100%",
          "justifyContent": "center",
          "variants": {
            "checked": {
              "false": {
                "backgroundColor": "transparent",
                "borderColor": "#667080",
                "opacity": 0.5,
              },
              "true": {
                "backgroundColor": "#667080",
                "borderColor": "#667080",
              },
            },
            "disabled": {
              "true": {
                "backgroundColor": "#EEF1F4",
                "borderColor": "#667080",
                "opacity": 0.5,
              },
            },
          },
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;
